# jax-dojo

./: .gitignore  evaluate.py  pyproject.toml  train.py
configs/: default.py
environments/: __init__.py  haber-bosch.py  haber_bosch.py
tests/: test_haber_bosch.py  test_training.py
