[project]
name = "jax-dojo"
version = "0.1.0"
description = "JAX-based Haber-Bosch process RL environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "gymnasium>=0.29.0",
    "sbx-rl>=0.18.0",
    "stable-baselines3>=2.3.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
